--- a/wiki/PlanningAuthoritiesO.wiki
+++ b/wiki/PlanningAuthoritiesO.wiki
@@ -3,5 +3,5 @@
 || || *Orkney Islands Council* || Kirkwall || pdf lists in random date ranges || http://www.orkney.gov.uk/nqcontent.cfm?a_id=5063&tt=orkneyv2 ||
 || Done || Oswestry Borough Council || Oswestry || PublicAccess || ||
 || Done || Oxford City Council || Oxford || PublicAccess || ||
-|| || *Oxfordshire County Council* || Oxford || No online apps as far as I can see - minerals and waste only || http://www.oxfordshire.gov.uk/wps/portal/publicsite/kcxml/04_Sj9SPykssy0xPLMnMz0vM0Y_QjzKL94039HcCSZnFO8WHOepHogtZIoR8PfJzU_WDgFKR5kAhY3Nf_aic1PTE5Er9YH1v_QD9gtzQiHJvR0cAojBqlw!!/delta/base64xml/L0lDU0lKTTd1aUNTWS9vQW9RQUFJUWdTQUFZeGpHTVl4U21BISEvNEpGaUNvMERyRTVST2dxTkM3OVlRZyEhLzdfTV8zN0wvMjQ!?WCM_PORTLET=PC_7_M_37L_WCM&WCM_GLOBAL_CONTEXT=http://apps.oxfordshire.gov.uk/wps/wcm/connect/Internet/Council+services/Environment+and+planning/Planning/Planning+applications/ ||
+|| || *Oxfordshire County Council* || Oxford || PDF for each month - minerals and waste only || http://www.oxfordshire.gov.uk/wps/portal/publicsite/kcxml/04_Sj9SPykssy0xPLMnMz0vM0Y_QjzKL94039HcCSZnFO8WHOepHogtZIoR8PfJzU_WDgFKR5kAhY3Nf_aic1PTE5Er9YH1v_QD9gtzQiHJvR0cAojBqlw!!/delta/base64xml/L0lJSk03dWlDU1lBIS9JTGpBQU15QUJFUkVSRUlrLzRGR2dkWW5LSjBGUm9YZnJDRUEhLzdfTV8zN00vMzY!?WCM_PORTLET=PC_7_M_37M_WCM&WCM_GLOBAL_CONTEXT=http://apps.oxfordshire.gov.uk/wps/wcm/connect/Internet/Council+services/Environment+and+planning/Planning/Planning+applications/Applications+we+decide/Decisions+and+progress ||
  
