Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesP.wiki
+++ b/wiki/PlanningAuthoritiesP.wiki
@@ -10,4 +10,4 @@
 || Done || Portsmouth || Portsmouth || PublicAccess || 
 || || *Powys* || Brecon, Llandrindod Wells, Welshpool || very little of use. || http://www.powys.gov.uk/index.php?id=75 || 
 || || *Preston* || Preston || weekly lists as pdf - hard to navigate|| http://www.preston.gov.uk/Category.asp?cat=1555 ||
-|| || *Purbeck* || Wareham || received since search || http://www.purbeck.gov.uk/planning/planappsrch.asp ||
+|| || *Purbeck* || Wareham || Like Shropshire || http://www.purbeck.gov.uk/planning/planappsrch.asp ||
