--- a/wiki/PlanningAuthoritiesC.wiki
+++ b/wiki/PlanningAuthoritiesC.wiki
@@ -30,7 +30,7 @@
 || Done || Colchester ||  Colchester Borough Council || [WAM] || http://www.planning.colchester.gov.uk/WAM/searchsubmit/performOption.do?action=search ||
 || Done || Comhairle nan Eilean Siar || Stornaway || PublicAccess || http://planning.cne-siar.gov.uk/PublicAccess/tdc/ ||
 ||  || *Congleton Borough Council* || Congleton || Weekly lists as pdf || http://www.congleton.gov.uk/?t=589 ||
-||  || *Conwy County Borough Council* || Conwy || Weekly lists as pdf (password "George" on the pdfs) || http://www.conwy.gov.uk/section.asp?cat=1536 ||
+||  || *Conwy County Borough Council* || Conwy || Conwy now has a PlanningExplorer. Weekly lists as pdf (password "George" on the pdfs) || http://www.conwy.gov.uk/Northgate/planningexplorerenglish/generalsearch.aspx, http://www.conwy.gov.uk/section.asp?cat=1536 ||
 ||  || *Copeland Borough Council* || Copeland || Weekly lists as pdf || http://www.copelandbc.gov.uk/main.asp?page=2888 ||
 || Done || Corby Borough Council || Corby || PublicAccess || https://publicaccess.corby.gov.uk/publicaccess/ ||
 || Done || Cornwall County Council || Cornwall || PublicAccess || http://planapps.cornwall.gov.uk/publicaccess/ ||
