--- a/wiki/PlanningAuthoritiesT.wiki
+++ b/wiki/PlanningAuthoritiesT.wiki
@@ -13,7 +13,7 @@
 ||  || *Thurrock Borough Council* || Grays || no date search || http://www.thurrock.gov.uk/planning/development/content.php?page=application_search ||
 || Done || Tonbridge & Malling Borough Council || West Malling || PublicAccess || http://publicaccess.tmbc.gov.uk/publicaccess/tdc/tdc_home.aspx ||
 || Done || Torbay Council || Torquay || PublicAccess || http://www.torbay.gov.uk/publicaccess/ ||
-||  || *Torfaen County Borough Council* || Cwmbran || weekly lists as word docs! || http://www.torfaen.gov.uk/en/living/index.php/mid=325~omid=172 ||
+||  || *Torfaen County Borough Council* || Cwmbran || weekly lists as PDF || http://www.torfaen.gov.uk/EnvironmentAndPlanning/Planning/DevelopmentControl/PlanningPermission/PlanningApplications.aspx ||
 || Done || Torridge District Council || Bideford || PublicAccess || http://www.torridge.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || Tower Hamlets Borough Council || London || [WAM] || http://194.201.98.213/WAM/searchsubmit/performOption.do?action=search ||
 || Done || Trafford Metropolitan Borough Council || Trafford || PlanningExplorer || http://planning.trafford.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
