Edited wiki page through web user interface.

--- a/wiki/SwiftLG.wiki
+++ b/wiki/SwiftLG.wiki
@@ -17,4 +17,5 @@ We now have a python parser for these (as well as parsers in PHP for East Herts 
     * Slough
     * Snowdonia National Park
     * St Edmundsbury
+    * Warrington
     * Dublin (though this might be a bit outside our remit :-)) 
