Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesO.wiki
+++ b/wiki/PlanningAuthoritiesO.wiki
@@ -1,5 +1,6 @@
 || Done || Oadby & Wigston Borough Council || Leicester || PublicAccess || ||
 || Done || Oldham Metropolitan Borough Council || Oldham || AcolNet || http://planning.oldham.gov.uk/planning//acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
+|| Done || Olympic Delivery Authority || London East End || PublicAccess || http://planning.london2012.com/publicaccess/tdc/DcApplication/application_searchform.aspx ||
 || || *Orkney Islands Council* || Kirkwall || pdf lists in random date ranges || http://www.orkney.gov.uk/nqcontent.cfm?a_id=5063&tt=orkneyv2 ||
 || Done || Oswestry Borough Council || Oswestry || PublicAccess || ||
 || Done || Oxford City Council || Oxford || PublicAccess || ||
