--- a/wiki/PlanningAuthoritiesC.wiki
+++ b/wiki/PlanningAuthoritiesC.wiki
@@ -1,5 +1,5 @@
 || || *Caerphilly* || Caerphilly County Borough Council || weekly lists as PDFs || http://www.caerphilly.gov.uk/yourservices/planning/planningbulletin/index.htm ||
-|| || *Cairngorms* || || || ||
+|| || *Cairngorms* || || Searchable by date || http://www.cairngorms.co.uk/planning/e-planning/index.php ||
 || || *Calderdale* ||  Calderdale Metropolitan Borough Council ||search by date, also last  7 days as html || http://www.calderdale.gov.uk/environment/planning/search-applications/index.jsp ||
 || Done || Cambridge ||  Cambridge City Council || PublicAccess|| http://www.cambridge.gov.uk/publicaccess/tdc/tdc_home.aspx ||
 || Done || Cambridgeshire ||  Cambridgeshire County Council || AcolNet *(few postcodes, and mostly partial)* || http://planapps.cambridgeshire.gov.uk/scripts/acolnet/acolnetcgi.exe? ||
