--- a/wiki/PlanningAuthoritiesL.wiki
+++ b/wiki/PlanningAuthoritiesL.wiki
@@ -10,4 +10,5 @@
 || Done || Lincoln City Council || Lincoln || PlanningExplorer || http://online.lincoln.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
 || Done || Lincolnshire County Council || Lincoln || AtriumePlanning || http://eplanning.lincolnshire.gov.uk/ePlanning/loadResults.do ||
 || Done || Liverpool City Council || Liverpool || PlanningExplorer || http://www.liverpool.gov.uk/environment/planning/mvm_explorer.asp ||
+|| || Loch Lomond and the Trossachs National Park || Weekly lists as PDF || http://www.lochlomond-trossachs.org/planning/lists.asp ||
 || Done  ||Luton Borough Council || Luton || PublicAccess ||  http://www.eplan.luton.gov.uk/PublicAccess/tdc/tdc_home.aspx ||
