Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -1,6 +1,7 @@
 = Scrapers being worked on =
 
   * Bridgend (Duncan) - [Ocella]
+  * Cannock Chase (Duncan) - [SwiftLG] - probably just needs adding.
   * Great Yarmouth (Duncan) - [Ocella]
   * Havering (Duncan) - [Ocella]
   * Isle of Man (Dan)
