--- a/wiki/PlanningAuthoritiesC.wiki
+++ b/wiki/PlanningAuthoritiesC.wiki
@@ -21,7 +21,7 @@
 ||  ||  *Cheshire* ||   Cheshire County Council  || PDFs, usefullish urls || http://www.cheshire.gov.uk/Planning/Planning%20Applications.htm ||
 ||  ||  *Chester* ||   Chester City Council  || UK Planning || http://www.ukplanning.com/chester/search/index.htm ||
 || Done ||  Chester-le-Street ||   Chester-le-Street District Council  || PublicAccess || http://planning.chester-le-street.gov.uk/publicaccess/ ||
-||  ||  *Chesterfield* ||  Chesterfield Borough Council  || Weekly list || http://www.chesterfield.gov.uk/planning/default.asp?mode=&ShowAll=true ||
+||  ||  *Chesterfield* ||  Chesterfield Borough Council  || last week or all apps in HTML || http://www.chesterfield.gov.uk/planning/default.asp?mode=&ShowAll=true ||
 || Done ||  Chichester ||   Chichester District Council  || PublicAccess and [WAM] || http://wam.chichester.gov.uk/WAM/search/pas/index.htm;jsessionid=5D6D9B7A4C0F07CC472DE776DF9EA75D ||
 || Done ||  Chiltern ||  Chiltern District Council  || PublicAccess - using https || https://isa.chiltern.gov.uk/publicaccess/ ||
 || Done ||  Chorley ||   Chorley Borough Council  || PublicAccess || http://planning.chorley.gov.uk/PublicAccess/propdb/property/property_searchform.aspx ||
