Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesD.wiki
+++ b/wiki/PlanningAuthoritiesD.wiki
@@ -13,7 +13,7 @@
 || Done || Dorset || Dorset County Council ||  AtriumePlanning || http://www.dorsetforyou.com/ePlanning/searchPageLoad.do ||
 || || *Dover* || Dover District Council || searchable by date received || http://www.dover.gov.uk/planning/Search_net/search.aspx ||
 || Done || Dudley || Dudley Metropolitan Borough Council || [SwiftLG] || http://www2.dudley.gov.uk/swiftlg/apas/run/Wphappcriteria.display ||
-|| || *Dumfries and Galloway* || Dumfries and Galloway Council || weekly pdy lists separated into five areas || http://www.dumgal.gov.uk/dumgal/MiniWeb.aspx?id=91&menuid=1408&openid=1102 ||
+|| || *Dumfries and Galloway* || Dumfries and Galloway Council || weekly PDF lists separated into five areas || http://www.dumgal.gov.uk/dumgal/MiniWeb.aspx?id=91&menuid=1408&openid=1102 ||
 || Done || Dundee || Dundee City Council || PublicAccess || ||
 || Done || Durham || Durham City Council || PublicAccess (works with php scraper, but not the python one) || http://publicaccess.durhamcity.gov.uk/ ||
 || || *Durham County* || Durham County Council || Online register searchable by month and year || http://gis.durham.gov.uk/website/dcs/SearchMain.asp ||
