--- a/wiki/SwiftLG.wiki
+++ b/wiki/SwiftLG.wiki
@@ -1,11 +1,9 @@
 Sites that look like East Hertfordshire (urls contain "wphappcriteria"):
 
-Need to do:
-    * Cannock Chase
-
 We now have a python parser for these (as well as parsers in PHP for East Herts and Islington).
 
     * Boston
+    * Cannock Chase *(no postcodes)
     * Daventry
     * Dudley
     * East Hertfordshire
