Edited wiki page through web user interface.

--- a/wiki/PlanningExplorer.wiki
+++ b/wiki/PlanningExplorer.wiki
@@ -20,13 +20,13 @@ Done, and working:
   * South Tyneside
   * Stockport
   * Tamworth
+  * Trafford
 
 A few have no postcodes. In some cases they provide OSGB, which we should probably use instead.
 
   * Broadland (no postcodes)
   * Forest Heath (no postcodes)
   * South Norfolk (appears to have WAM as well) (No postcodes - but has OSGB coords)
-  * Trafford (no postcodes)
   * West Oxfordshire (no postcodes)
 
 These ones are not yet done:
