--- a/wiki/PlanningAuthoritiesB.wiki
+++ b/wiki/PlanningAuthoritiesB.wiki
@@ -14,6 +14,7 @@
 || || *Birmingham* ||Birmingham City Council || searchable by date || http://www.birmingham.gov.uk/GenerateContent?CONTENT_ITEM_ID=67548&CONTENT_ITEM_TYPE=0&MENU_ID=12189 ||
 || Done || Blaby || Blaby District Council || PublicAccess || http://www.blaby.gov.uk/PublicAccess ||
 || Done || Blackburn || Blackburn with Darwen Borough Council || PlanningExplorer || http://195.8.175.6/MVM/Online/PL/GeneralSearch.aspx ||
+|| Done || Blackpool || Blackpool || AcolNet || http://www2.blackpool.gov.uk/PlanningApplications/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 || || *Blaenau Gwent* ||Blaenau Gwent County Borough Council || Apps by year in one big html page ||http://www.blaenau-gwent.gov.uk/environment/8380.asp ||
 || || *Blyth Valley* || Blyth Valley Borough Council || weekly lists as pdf, rather out of date || http://www.blythvalley.gov.uk/Default.aspx?page=10932 ||
 || Done || Bolsover || Bolsover District Council || PublicAccess || http://217.158.161.181/publicaccess/tdc/DcApplication/application_searchform.aspx ||
