--- a/wiki/PlanningAuthoritiesM.wiki
+++ b/wiki/PlanningAuthoritiesM.wiki
@@ -8,7 +8,7 @@
 || Done || Melton Borough Council || Melton Mowbray || PublicAccess (from 2008, previously RutlandLike) || http://publicaccess.melton.gov.uk/publicaccess/tdc/ ||
 ||  || *Mendip District Council* || Shepton Mallet || searchable by date || http://www.mendip.gov.uk/pods/ApplicationSearch.asp ||
 ||  || *Merthyr Tydfil County Council* || Merthyr Tydfil || weekly lists as pdf || http://www.merthyr.gov.uk/Home/Local+Services/Planning/Development+Control/Weekly+List/April+2007.htm ||
-|| In Progress || *Merton Borough Council* || Morden || PlanningExplorer - site is down || http://planning.merton.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
+|| Done || Merton Borough Council || Morden || PlanningExplorer || http://planning.merton.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
 || Done || Mid Bedfordshire District Council || Biggleswade || AcolNet ||  http://www.midbeds.gov.uk/services/planning/planning_apps/Weekly_List_of_Planning_Applications.asp ||
 || Done || Mid Devon District Council || Tiverton || PublicAccess || http://planning.middevon.gov.uk/publicaccess/ ||
 || Done (no postcodes) || Mid Suffolk District Council || Needham Market || AcolNet, but locations have no postcode || http://www.midsuffolkdc.gov.uk/planning/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.PgeSearch ||
