--- a/wiki/PlanningAuthoritiesN.wiki
+++ b/wiki/PlanningAuthoritiesN.wiki
@@ -5,7 +5,7 @@
 || Done (but getting forbidden) || *Newcastle upon Tyne City Council* || Newcastle upon Tyne || PublicAccess || Gives a connection refused ||
 || Done || Newcastle-under-Lyme Borough Council || Newcastle-under-Lyme || PublicAccess || ||
 || Done || Newham Borough Council || East Ham || PublicAccess || ||
-|| || *Newport City Council* || Newport || weekly lists as pdf || http://www.newport.gov.uk/_dc/index.cfm?fuseaction=planapps.applist ||
+|| Done || Newport City Council || Newport || weekly lists as pdf - Perl scraper from Peter || http://www.newport.gov.uk/_dc/index.cfm?fuseaction=planapps.applist ||
 || || *Norfolk County Council* || Norwich || *(no postcodes)* Minerals and waste only. All current apps in html || http://ptweb.norfolk.gov.uk/planning_applications/read/show.asp?Decision=CURRENT&Type=W&Submit=Submit ||
 || || *North Ayrshire Council* || Irvine || weekly lists as pdf || http://www.north-ayrshire.gov.uk/na/Home.nsf/OtherMenuPage?ReadForm&MenuType=Environment-Planning&DocDisplay=NoDoc&CatLevel=2|| ||
 || || *North Cornwall District Council* || Bodmin, Wadebridge || searchable by date || http://onlineplanning.ncdc.gov.uk/eaccess/Planning/Planning-application-and-property-Search/Application-Search/Application-Search.asp ||
