North Ayrshire, Redbridge: added

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -32,6 +32,8 @@ Others:
   * Maldon (and Pendle)
   * Medway
   * Newport (from Peter)
+  * North Ayrshire (from Peter)
+  * Redbridge (from Peter)
   * Shetland Islands
   * Shropshire (and North Yorkshire, South Northamptonshire)
   * South Oxfordshire
