--- a/wiki/PlanningAuthoritiesN.wiki
+++ b/wiki/PlanningAuthoritiesN.wiki
@@ -7,7 +7,7 @@
 || Done || Newham Borough Council || East Ham || PublicAccess || ||
 || Done || Newport City Council || Newport || weekly lists as pdf - Perl scraper from Peter || http://www.newport.gov.uk/_dc/index.cfm?fuseaction=planapps.applist ||
 || || *Norfolk County Council* || Norwich || *(no postcodes)* Minerals and waste only. All current apps in html || http://ptweb.norfolk.gov.uk/planning_applications/read/show.asp?Decision=CURRENT&Type=W&Submit=Submit ||
-|| || *North Ayrshire Council* || Irvine || weekly lists as pdf || http://www.north-ayrshire.gov.uk/na/Home.nsf/OtherMenuPage?ReadForm&MenuType=Environment-Planning&DocDisplay=NoDoc&CatLevel=2|| ||
+|| Done || North Ayrshire Council || Irvine || weekly lists as pdf - Perl scraper from Peter || http://www.north-ayrshire.gov.uk/na/Home.nsf/OtherMenuPage?ReadForm&MenuType=Environment-Planning&DocDisplay=NoDoc&CatLevel=2|| ||
 || || *North Cornwall District Council* || Bodmin, Wadebridge || searchable by date || http://onlineplanning.ncdc.gov.uk/eaccess/Planning/Planning-application-and-property-Search/Application-Search/Application-Search.asp ||
 || || *North Devon District Council* || Barnstaple || searchable by date || http://planning.northdevon.gov.uk/search.asp ||
 || || *North Dorset District Council* || Blandford Forum || weekly lists as pdf || http://www.north-dorset.gov.uk/index/living/building_planning/development_control/planning_applications-3/view_application.htm ||
