--- a/wiki/PlanningAuthoritiesB.wiki
+++ b/wiki/PlanningAuthoritiesB.wiki
@@ -1,5 +1,5 @@
 || Done || Babergh || Babergh District Council || AcolNet (New site from 22/06/2007)|| http://planning.babergh.gov.uk/dcdatav2//acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
-|| Done || Barking and Dagenham || Barking, Dagenham || [WAM] || http://idoxwam.lbbd.gov.uk:8081/WAM/search/pas/index.htm ||
+|| Done || Barking and Dagenham || Barking, Dagenham || PublicAccess || http://paweb.barking-dagenham.gov.uk/PublicAccess/default.aspx ||
 || Done || Barnet || Barnet Borough Council || AcolNet || http://194.75.183.100/planning-cases/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 || Done || Barnsley || Barnsley Metropolitan Borough Council || Custom Scraper ||http://applications.barnsley.gov.uk/service/development/weeklylist.asp ||
 || Done || Barrow ||Barrow-in-Furness Borough Council || ApplicationSearchServlet || http://localportal.barrowbc.gov.uk/portal/servlets/WeeklyListServlet ||
