--- a/wiki/PlanningAuthoritiesA.wiki
+++ b/wiki/PlanningAuthoritiesA.wiki
@@ -5,7 +5,7 @@
 || || *Adur* ||Adur District Council || weekly listings as pdf || http://www.adur.gov.uk/planning/applications/planning-apps.htm || 
 || Done || Allerdale || Allerdale Borough Council || ApplicationSearchServlet || http://planning.allerdale.gov.uk/portal/servlets/ApplicationSearchServlet || 
 || Done || Alnwick || Alnwick District Council || ApplicationSearchServlet || http://services.castlemorpeth.gov.uk:7777/portal/servlets/ApplicationSearchServlet ||
-|| || *Amber Valley* || Amber Valley Borough Council || search facility with dates || http://www.ambervalley.gov.uk/services/environment/landandpremises/planningtownandcountry/planningapplications/PlanningApplicationRegister.htm ||
+|| Done || Amber Valley || Amber Valley Borough Council || Custom Scraper || http://www.ambervalley.gov.uk/services/environment/landandpremises/planningtownandcountry/planningapplications/PlanningApplicationRegister.htm ||
 || Done || Angus || Angus Council || PublicAccess || http://planning.angus.gov.uk/PublicAccess/tdc/tdc_home.aspx ||
 || Done || Argyll and Bute || Argyll and Bute Council || PublicAccess || http://www.argyll-bute.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || Arun || Arun District Council || [Ocella] || http://www.arun.gov.uk/iplanning/portal/page?_pageid=33,4139&_dad=portal&_schema=PORTAL ||
