Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -18,6 +18,7 @@ Types of site for which we have scrapers written
 
 Others:
 
+  * Amber Valley
   * Barnsley
   * Brentwood (from Peter)
   * Broxbourne - Tom's Scraper
