Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -20,6 +20,7 @@ Others:
   * Aberdeenshire
   * Amber Valley
   * Barnsley
+  * Berwick
   * Brent
   * Brentwood (from Peter)
   * Broxbourne - Tom's Scraper
