--- a/wiki/PlanningAuthoritiesB.wiki
+++ b/wiki/PlanningAuthoritiesB.wiki
@@ -11,7 +11,7 @@
 || || *Bedfordshire* || Bedfordshire County Council || minerals and waste only. Single PDF with *no postcodes* || http://www.bedfordshire.gov.uk/Resources/PDF/EnvironmentAndPlanning/PlanningApplications/Monitoring%20progress.pdf ||
 || Done || Berwick || Berwick-upon-Tweed Borough Council || Custom Scraper || http://www.berwick-upon-tweed.gov.uk/planning/register.htm ||
 || Done || Bexley || Bexley Borough Council || PublicAccess ||http://publicaccess.bexley.gov.uk/publicaccess/tdc/tdc_home.aspx ||
-|| || *Birmingham* ||Birmingham City Council || searchable by date || http://www.birmingham.gov.uk/GenerateContent?CONTENT_ITEM_ID=67548&CONTENT_ITEM_TYPE=0&MENU_ID=12189 ||
+|| Done || Birmingham ||Birmingham City Council || Custom Scraper || http://www.birmingham.gov.uk/GenerateContent?CONTENT_ITEM_ID=67548&CONTENT_ITEM_TYPE=0&MENU_ID=12189 ||
 || Done || Blaby || Blaby District Council || PublicAccess || http://www.blaby.gov.uk/PublicAccess ||
 || Done || Blackburn || Blackburn with Darwen Borough Council || PlanningExplorer || http://195.8.175.6/MVM/Online/PL/GeneralSearch.aspx ||
 || Done || Blackpool || Blackpool || AcolNet || http://www2.blackpool.gov.uk/PlanningApplications/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
