Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -21,6 +21,7 @@ Others:
   * Amber Valley
   * Barnsley
   * Berwick
+  * Birmingham
   * Brent
   * Brentwood (from Peter)
   * Broxbourne - Tom's Scraper
