--- a/wiki/PlanningAuthoritiesK.wiki
+++ b/wiki/PlanningAuthoritiesK.wiki
@@ -5,7 +5,7 @@
 ||  || *Kettering Borough Council* || Kettering || weekly list, search facility without date || http://www.kettering.gov.uk/site/scripts/planning_list.php?weeklyList=true ||
 || Done || King's Lynn & West Norfolk Borough Council || King's Lynn || PublicAccess || http://online.west-norfolk.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || Kingston upon Hull City Council || Hull || PublicAccess || http://web.hullcc.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx || 
-||  || *Kingston-upon-Thames Borough Council* || Kingston upon Thames || searchable by date || http://maps.kingston.gov.uk/planning/planning_search.aspx ||
+|| Done || Kingston uponThames Borough Council || Kingston upon Thames || Custom Scraper || http://maps.kingston.gov.uk/planning/planning_search.aspx ||
 ||  || *Kirklees Metropolitan Council* || Huddersfield || searchable by date || 	http://www.kirklees.gov.uk/business/planning/planning.asp ||
 || Done || Knowsley Metropolitan Borough Council || Huyton || PublicAccess || http://publicaccess.knowsley.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 	
