Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -33,6 +33,7 @@ Others:
   * Highland (from Peter)
   * Isle of Wight
   * Kensington and Chelsea
+  * Kingston upon Thames
   * Maldon (and Pendle)
   * Medway
   * Newport (from Peter)
