Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesH.wiki
+++ b/wiki/PlanningAuthoritiesH.wiki
@@ -22,7 +22,7 @@
 || Done || Hillingdon Borough Council || Uxbridge || [Ocella] *(few postcodes)* || http://w09.hillingdon.gov.uk/portal/page?_pageid=33,82093&_dad=portal&_schema=PORTAL ||
 || Done || Hinckley and Bosworth Borough Council || Hinckley || PublicAccess using https || https://cx.hinckley-bosworth.gov.uk/PublicAccess/dc/dc_home.aspx ||
 || Done || Horsham District Council || Horsham || PublicAccess || http://publicaccess.horsham.gov.uk/publicaccess/tdc/tdc_home.aspx ||
-||  || *London Borough of Hounslow* || Hounslow || searchable by date || http://planning.hounslow.gov.uk/planningv2/planning_search.aspx, Can do a direct get to http://planning.hounslow.gov.uk/planningv2/planning_summary.aspx?strWeekListType=SRCH&strRecTo=10/07/2008&strRecFrom=01/07/2008&strWard=ALL&strAppTyp=ALL&strWardTxt=All%20Wards&strAppTypTxt=All%20Application%20Types&strArea=ALL&strAreaTxt=All%20Areas&strStreet=ALL&strStreetTxt=All%20Streets&strPC=&strLimit=50 ||
+|| Done || London Borough of Hounslow || Hounslow || Custom Scraper || http://planning.hounslow.gov.uk/planningv2/planning_search.aspx, Can do a direct get to http://planning.hounslow.gov.uk/planningv2/planning_summary.aspx?strWeekListType=SRCH&strRecTo=10/07/2008&strRecFrom=01/07/2008&strWard=ALL&strAppTyp=ALL&strWardTxt=All%20Wards&strAppTypTxt=All%20Application%20Types&strArea=ALL&strAreaTxt=All%20Areas&strStreet=ALL&strStreetTxt=All%20Streets&strPC=&strLimit=50 ||
 || Done || Huntingdonshire District Council || Huntingdon || PublicAccess || http://planning.huntsdc.gov.uk/publicaccess/tdc/tdc_home.aspx ||
 ||  || *Hyndburn Borough Council* || Accrington || Apps in html, but no search || http://www.hyndburnbc.gov.uk/roundabout/opencms/environment/Planning_and_Transportation/Development_control/applications/applications_deposited/index.html ||
  
