Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -31,6 +31,7 @@ Others:
   * Forest of Dean
   * Glasgow (from Peter)
   * Highland (from Peter)
+  * Hounslow
   * Isle of Wight
   * Kensington and Chelsea
   * Kingston upon Thames
