Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -30,6 +30,7 @@ Others:
   * Flintshire
   * Forest of Dean
   * Glasgow (from Peter)
+  * Harrow (no satisfactory info url)
   * Highland (from Peter)
   * Hounslow
   * Isle of Wight
