Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -45,6 +45,7 @@ Others:
   * Shropshire (and North Yorkshire, South Northamptonshire)
   * South Oxfordshire
   * Walsall - Paul's Scraper
+  * Westminster
   * York
 
 Provided directly by the council:
