--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -20,6 +20,7 @@
   * Hillingdon
   * Mid Suffolk
   * North Yorkshire (has OSGB)
+  * Snowdonia
   * South Norfolk
   * South Northamptonshire (has OSGB)
   * South Somerset (has OSGB)
