Edited wiki page through web user interface.

--- a/wiki/PlanIT.wiki
+++ b/wiki/PlanIT.wiki
@@ -1,4 +1,5 @@
 #labels Phase-Implementation
+# A scraper for the PlanIT system
 = Introduction =
 Proposed development of a scraper for the Plan-It system.
 
